--- a/tsparser/src/builder/templates/entrypoints/services/main.handlebars
+++ b/tsparser/src/builder/templates/entrypoints/services/main.handlebars
@@ -9,10 +9,11 @@ import {{toJSON import_path}};
 const handlers: Handler[] = [
 {{#each endpoints}}
     {
-        service: {{toJSON ../name}},
-        name:    {{toJSON name}},
-        handler: {{name}}Impl,
-        raw:     {{toJSON raw}},
+        service:   {{toJSON ../name}},
+        name:      {{toJSON name}},
+        handler:   {{name}}Impl,
+        raw:       {{toJSON raw}},
+        streaming: {{toJSON streaming}},
     },
 {{/each}}
 ];
